[package]
name = "rust-in-motion"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version="1.0.136", features = ["derive"]}
serde_json = "1.0.79"
quick-error = "2.0.1"
error-chain = "0.12.4"
failure_derive = "0.1.8"
failure = "0.1.8"
rand = "0.8.5"